2017-04-05  Mark Wielaard  <mark@klomp.org>

	* test-subr.sh (testrun_on_self_compressed): New function.
	* run-elflint-self.sh: Call testrun_on_self_compressed.
	* run-elflint-test.sh: Add testfile42z and testfile-s390x-hash-bothz.

2017-03-30  Mark Wielaard  <mark@klomp.org>

	* peel_type.c: New file.
	* run-peel-type.sh: New test.
	* Makefile.am (check_PROGRAMS): Add peel_type.c.
	(TESTS): Add run-peel-type.sh.
	(EXTRA_DIST): Likewise.
	(peel_type_LDADD): New variable.

2017-03-27  Mark Wielaard  <mark@klomp.org>

	* fillfile.c: New file.
	* Makefile.am (check_PROGRAMS): Add fillfile.
	(TESTS): Likewise.
	(fillfile_LDADD): New variable.

2017-02-15  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (EXTRA_DIST): Add testfileppc64attrs.o.bz2.
	* run-readelf-A.sh: Add testfileppc64.o test.

2017-02-15  Ulf Hermann  <ulf.hermann@qt.io>

	* elfstrmerge.c: Include system.h.

2017-02-09  Ulf Hermann  <ulf.hermann@qt.io>

	* backtrace.c: Add an option to allow unknown symbols in the trace
	* backtrace-substr.sh: Add an option to allow unknown symbols
	to check_core() and allow failed symbol lookups in check_err()

2017-02-09  Ulf Hermann  <ulf.hermann@qt.io>

	* backtrace-data.c: Don't assert that symbols are found.
	The unwinder is allowed to ask for invalid addresses. We deny
	such requests, rather than make the test fail.

2016-11-17  Mark Wielaard  <mjw@redhat.com>

	* run-readelf-s.sh: Add --symbols=.dynsym and --symbols=.symtab tests.

2016-11-02  Mark Wielaard  <mjw@redhat.com>

	* backtrace-data.c (thread_callback): Add explicit break after error.
	* backtrace.c (callback_verify): Change PASSTHRU to FALLTHRU.

2016-10-22  Kevin Cernekee  <cernekee@chromium.org>

	* Makefile.am (TESTS): Add run-unstrip-test4.sh.
	(EXTRA_DIST): Add run-unstrip-test4.sh, testfile-strtab.bz2,
	testfile-strtab.stripped.bz2, testfile-strtab.debuginfo.bz2.
	(run-unstrip-test4.sh): New file.
	(testfile-strtab.bz2): New file.
	(testfile-strtab.stripped.bz2): New file.